kubernetes/demo/Nacos/nacos/nacos-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nacos-manage
  namespace: default
spec:
  type: NodePort
  ports:
    - port: 8848
      targetPort: 8848
      nodePort: 31256
      name: "nacos-manage-port"
  selector:
    app: nacos
